--- a/style.css
+++ b/style.css
@@ -128,3 +128,9 @@ li{
 .personal{
     margin-left: 27px;
 }
+@media (max-width: 480px) {
+    .mainContainer{
+        max-width: 100%;
+       
+    }
+}
